--- a/Front/package.json
+++ b/Front/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "vercel:dev": "vercel dev",
+    "vercel:deploy": "vercel",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -39,6 +41,7 @@
     "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "vercel": "^44.4.3"
   }
 }
